# django_rest

./: pyproject.toml
.circleci/: config.yml
apps/: admin.py  apiviews.py  models.py  requirements.txt  serializers.py  tests.py  urls.py  views.py
apps/migrations/: 0001_initial.py
root/: settings.py  urls.py
